macOS V2 Sandbox: Add component flash player to PPAPI sandbox profile.

This adds access to the component flash player to the PPAPI sandbox
profile.

Tbr: creis@chromium.org
Bug: 802276
Change-Id: Iddf87ef8a14c2b6ffe8950e870ea81503a415395
Reviewed-on: https://chromium-review.googlesource.com/882219
Commit-Queue: Greg Kerr <kerrnel@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Joshua Pawlicki <waffles@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533467}
Former-commit-id: 51462da1bd4a72aeebe0cff5bfb7038cf0310114