content/browser/child_process_launcher_helper_mac.cc
@@ -135,9 +135,11 @@ bool ChildProcessLauncherHelper::BeforeLaunchOnLauncherThread(
         break;
       case service_manager::SANDBOX_TYPE_GPU:
       case service_manager::SANDBOX_TYPE_NACL_LOADER:
-      case service_manager::SANDBOX_TYPE_PPAPI:
       case service_manager::SANDBOX_TYPE_RENDERER:
         SetupCommonSandboxParameters(seatbelt_exec_client_.get());
+        break;
+      case service_manager::SANDBOX_TYPE_PPAPI:
+        SetupPPAPISandboxParameters(seatbelt_exec_client_.get());
         break;
       case service_manager::SANDBOX_TYPE_UTILITY:
       case service_manager::SANDBOX_TYPE_PDF_COMPOSITOR:
