content/browser/sandbox_parameters_mac.mm
@@ -12,11 +12,14 @@
 #include "base/mac/bundle_locations.h"
 #include "base/mac/mac_util.h"
 #include "base/numerics/checked_math.h"
+#include "base/strings/stringprintf.h"
 #include "base/strings/sys_string_conversions.h"
 #include "base/sys_info.h"
 #include "content/public/browser/content_browser_client.h"
+#include "content/public/browser/plugin_service.h"
 #include "content/public/common/content_client.h"
 #include "content/public/common/content_switches.h"
+#include "content/public/common/pepper_plugin_info.h"
 #include "sandbox/mac/seatbelt_exec.h"
 #include "services/service_manager/sandbox/mac/sandbox_mac.h"
 
@@ -89,6 +92,31 @@ void SetupCommonSandboxParameters(sandbox::SeatbeltExecClient* client) {
       service_manager::SandboxMac::GetCanonicalPath(base::GetHomeDir()).value();
   CHECK(client->SetParameter(
       service_manager::SandboxMac::kSandboxHomedirAsLiteral, homedir));
+}
+
+void SetupPPAPISandboxParameters(sandbox::SeatbeltExecClient* client) {
+  SetupCommonSandboxParameters(client);
+
+  std::vector<content::WebPluginInfo> plugins;
+  PluginService::GetInstance()->GetInternalPlugins(&plugins);
+
+  base::FilePath bundle_path = service_manager::SandboxMac::GetCanonicalPath(
+      base::mac::MainBundlePath());
+
+  const std::string param_base_name = "PPAPI_PATH_";
+  int index = 0;
+  for (const auto& plugin : plugins) {
+    // Only add plugins which are external to Chrome's bundle to the profile.
+    if (!bundle_path.IsParent(plugin.path) && plugin.path.IsAbsolute()) {
+      std::string param_name =
+          param_base_name + base::StringPrintf("%d", index++);
+      CHECK(client->SetParameter(param_name, plugin.path.value()));
+    }
+  }
+
+  // The profile does not support more than 4 PPAPI plugins, but it will be set
+  // to n+1 more than the plugins added.
+  CHECK(index <= 5);
 }
 
 void SetupCDMSandboxParameters(sandbox::SeatbeltExecClient* client) {
